# ControlSystemAdapter-TangoAdapter

./: CMakeLists.txt
cmake/: Makefile.cosade.in  Makefile.dpvatestsrv.in
doc/: example-AttributeMapper.xml  mainpage.dox
examples/example/: CMakeLists.txt
examples/example/include/: ExampleApp.h
examples/example/src/: ExampleApp.cc
examples/example1/: CMakeLists.txt  ClassFactory.cpp  ExampleApp.h  MyApplication.cc  MyApplication.h  TestChimeraTK.cpp  TestChimeraTK.h  TestChimeraTKClass.cpp  TestChimeraTKClass.h  TestChimeraTKStateMachine.cpp  main.cpp
examples/example1/config/: oven.map
examples/example1/configs/: oven.map
examples/example2/: CMakeLists.txt  ChimeraTKExample2.cpp  ChimeraTKExample2.h  ChimeraTKExample2.xmi  ChimeraTKExample2Class.cpp  ChimeraTKExample2Class.h  ChimeraTKExample2StateMachine.cpp  ClassFactory.cpp  MyApplication.h  TestChimeraTK.xmi  main.cpp
examples/example2/configs/: example2.dmap
examples/example2/include/: ExampleApp.h
examples/example2/server/: ClassFactory.cpp  TestChimeraTK2.cpp  TestChimeraTK2.h  TestChimeraTK2Class.cpp  TestChimeraTK2Class.h  TestChimeraTK2StateMachine.cpp  main.cpp
examples/example2/src/: ExampleApp.cc
include/: AdapterAttribute.h  AdapterDeviceClass.h  AdapterDeviceImpl.h  AttributMapper.h  AttributProperty.h  AttributeImpl.h  AttributeMapper.h  AttributeProperty.h  ClassFactory.h  Command.h  DeviceClass.h  DeviceImpl.h  ImageAttribTempl.h  ScalarAttribTempl.h  ScalarAttributeProxy.h  SpectrumAttribTempl.h  TangoAdapter.h  TangoLogCompat.h  TangoPropertyHelper.h  TangoUpdater.h  TestChimeraTK2.h  TestChimeraTK2Class.h  getAllVariableNames.h
src/: AdapterDeviceClass.cpp  AdapterDeviceImpl.cpp  AttributMapper.cpp  AttributeProperty.cpp  ClassFactory.cpp  Command.cpp  DeviceClass.cc  DeviceImpl.cc  DeviceImplStateMachine.cpp  TangoAdapter.cpp  TangoAdapterStateMachine.cpp  TangoUpdater.cpp  TestChimeraTK2.cpp  TestChimeraTK2Class.cpp  getAllVariableNames.cc  main.cpp
tests/: serverTestFilterAttributes_ds_AttributeMapper.xml  serverTestMapTwice_ds-AttributeMapper.xml  serverTestMapTwice_ds_AttributeMapper.xml  testFilterAttributes_template.db  testMapTwice_template.db  testPersistSpectrumDatabase_template.db  testServerFaultNoDmap_template.db  testServerFaultWrongAttribute_template.db
tests/include_lib/: ExtendedReferenceTestApplication.h  TangoTestServer.h
tests/src/: testAttributeProperty.cc  testTangoAttributeMapper.cc  testTangoServer.cpp  testTangoServerErrorFlag.cc  testTangoServerFaultStartup.cc  testTangoServerFaultStartup2.cc  testTangoServerFilterAttributes.cpp  testTangoServerImportAll.cpp  testTangoServerMapTwice.cc  testTangoServerPersistSpectrum.cpp  testTangoServerPersistSpectrumRead.cpp  testTangoServerReadWrite.cc
tests/src_lib/: ExtendedReferenceTestApplication.cc  TangoTestServer.cc
tools/: xml2tango.py
xmlschema/: tango_variable_tree.xsd
